# infrared-light

./: .gitignore  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/workflows/: hacs-validate.yml  linting.yml
custom_component/infrared_light/devices/: nec_re0201_ch1.yaml  silvercrest_14135502l.yaml
custom_component/infrared_light/lib/: common.py  multi_command.py
custom_components/infrared_light/: __init__.py  config_flow.py  const.py  light.py  manifest.json
custom_components/infrared_light/devices/: aconic_24key.yaml  nec_re0201_ch1.yaml  nec_re0201_ch2.yaml  takizumi_tlr002.yaml  toshiba_frc199t_ch1.yaml  toshiba_frc199t_ch2.yaml
custom_components/infrared_light/lib/: common.py  multi_command.py  nec2_command.py
custom_components/infrared_light/translations/: en.json
